--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,8 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="unpoly.min.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/unpoly.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&display=swap"
@@ -21,7 +21,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap" rel="stylesheet">
-    <script src="unpoly.js"></script>
+    <script src="/unpoly.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script>
@@ -71,26 +71,24 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <nav class="header flex">
-        <a href="/model" up-navigate='false' up-follow up-target="main" class="current mr-10">
+        <a href="/model" up-navigate='true' up-follow up-target="main" class="current mr-10">
             <div>
                 Model
             </div>
         </a>
 
-        <a href="/data" up-navigate='false' up-follow up-target="main">
+        <a href="/data" up-navigate='true' up-follow up-target="main">
             <div>
                 Data
             </div>
         </a>
 
     </nav>
-    <loading-indicator>
-        <div class="w-full h-full flex justify-center content-center">
-            <svg width="50" height="50" viewBox="0 0 250 250">
-                <circle class="bg" cx="125" cy="125" r="115" fill="none" stroke="#ddd" stroke-width="20"></circle>
-                <circle class="fg" cx="125" cy="125" r="115" fill="none" stroke="#5394fd" stroke-width="20"></circle>
-            </svg>
+    <loading-indicator class="z-50 absolute top-0 left-0 right-0 bottom-0">
+        <div class="w-full h-full absolute bg-black opacity-30 flex flex-wrap justify-center content-center">
+            <div class="loader"></div>
         </div>
+
     </loading-indicator>
 
     <main up-poll up-interval="10000"> 
